OC-30: fix problem of --add-opens for JDK9+, skip gwt IT test on JDK8 as GWT 2.13 requires Java 11+